Added youtube and lyric to song response